# test

./: local.properties
app/: build.gradle
app/src/jni/: CMakeLists.txt  movenet.cpp  movenet.h  movenetncnn.cpp  utils.cpp
app/src/main/: AndroidManifest.xml
app/src/main/assets/: student.json
app/src/main/res/anim/: main4_sub1_blink.xml
app/src/main/res/drawable/: btn_back.xml  btn_gradient.xml  btn_gradient_add.xml  btn_main4_shape.xml  btn_main5_sub_over.xml  btn_pressed.xml  button_select.xml  circular_progress_bar.xml  color_background.xml  color_btn.xml  color_goto.xml  color_list_stu.xml  color_main3_back.xml  color_main_press.xml  color_main_press2.xml  color_main_set.xml  color_name.xml  color_recognition.xml  color_small_btn.xml  color_small_btn_fu.xml  main2_go_wid.xml  main2_stu_search.xml  main3_arr_wid.xml  main3_back_wid.xml  main3_boy_wid.xml  main3_fit_wid.xml  main3_girl_wid.xml  main3_pose_wid.xml  main4_back_wid.xml  main4_sub1_arrow_wid.xml  main4_sub1_camera_wid.xml  main4_sub1_exist_wid.xml  main4_sub1_showcamera_shape.xml  main4_sub2_progress_bar.xml  main4_sub2_step_wid.xml  main4_sub3_scan_wid.xml  main4_sub4_scan_wid.xml  main4_view1_wid.xml  main4_view2_wid.xml  main4_view3_wid.xml  (+18 more)
app/src/main/res/layout/: activity_main.xml  activity_main2_stu_list.xml  activity_main3_function.xml  activity_main4_fit_0.xml  activity_main4_sub1.xml  activity_main4_sub2.xml  activity_main4_sub3.xml  activity_main4_sub4.xml  activity_main4_sub5.xml  activity_main4_sub6.xml  activity_main5_age3_6.xml  (+47 more)
gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
